# educannombra

./: .gitignore  README.md  deploy.sh  main.py  pyproject.toml  requirements.txt  run.sh  settings.py
.github/workflows/: ci.yml
lib/: designations.py  dispatcher.py  resolution.py  utils.py
templates/: designation.jinja  resolution.jinja
