[project]
name = "educannombra"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "logzero>=1.7.0",
    "prettyconf>=2.3.0",
    "pypdf2>=3.0.1",
    "requests>=2.32.3",
    "telegramtk>=0.1.0",
    "typer>=0.15.4",
]

[dependency-groups]
dev = ["ipython>=9.2.0", "pytest>=8.3.5"]
prod = []
